@@ -5,26 +5,23 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.correomqtt.business.model.HooksDTO;
+import org.correomqtt.business.model.SettingsDTO;
+import org.correomqtt.business.provider.PluginConfigProvider;
+import org.correomqtt.business.provider.SettingsProvider;
+import org.correomqtt.business.utils.VendorConstants;
+import org.correomqtt.business.utils.VersionUtils;
+import org.correomqtt.plugin.model.PluginInfoDTO;
+import org.correomqtt.plugin.repository.BundledPluginList;
+import org.correomqtt.plugin.repository.CorreoUpdateRepository;
 import org.correomqtt.plugin.spi.BaseExtensionPoint;
 import org.correomqtt.plugin.spi.DetailViewManipulatorHook;
 import org.correomqtt.plugin.spi.ExtensionId;
 import org.correomqtt.plugin.spi.IncomingMessageHook;
 import org.correomqtt.plugin.spi.MessageValidatorHook;
 import org.correomqtt.plugin.spi.OutgoingMessageHook;
-import org.correomqtt.business.model.SettingsDTO;
-import org.correomqtt.business.provider.PluginConfigProvider;
-import org.correomqtt.business.provider.SettingsProvider;
-import org.correomqtt.business.utils.VersionUtils;
-import org.correomqtt.plugin.model.PluginInfoDTO;
-import org.correomqtt.plugin.repository.BundledPluginList;
-import org.correomqtt.plugin.repository.CorreoUpdateRepository;
+import org.correomqtt.plugin.spi.OutgoingMessageHookDTO;
 import org.correomqtt.plugin.transformer.PluginInfoTransformer;
-import org.pf4j.ExtensionFactory;
 import org.pf4j.JarPluginManager;
-import org.pf4j.ManifestPluginDescriptorFinder;
-import org.pf4j.PluginDescriptorFinder;
-import org.pf4j.PluginFactory;
-import org.pf4j.PluginLoader;
 import org.pf4j.PluginState;
 import org.pf4j.PluginWrapper;
 import org.pf4j.update.UpdateManager;
@@ -45,15 +42,14 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static org.correomqtt.business.utils.VendorConstants.BUNDLED_PLUGINS_URL;
-import static org.correomqtt.business.utils.VendorConstants.DEFAULT_REPO_URL;
-
 public class PluginManager extends JarPluginManager {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(PluginManager.class);
     public static final String DEFAULT_REPO_ID = "default";
 
     private static PluginManager instance;
+
+    private BundledPluginList.BundledPlugins bundledPlugins;
 
     private PluginManager() {
         // private constructor
@@ -109,14 +105,18 @@ public class PluginManager extends JarPluginManager {
 
     public BundledPluginList.BundledPlugins getBundledPlugins() {
 
+        if(bundledPlugins != null){
+            return bundledPlugins;
+        }
+
         SettingsDTO settings = SettingsProvider.getInstance().getSettings();
 
-        if(settings.isInstallBundledPlugins()) {
+        if (settings.isInstallBundledPlugins()) {
 
             String bundledPluginUrl = settings.getBundledPluginsUrl();
 
-            if(bundledPluginUrl == null){
-                bundledPluginUrl = BUNDLED_PLUGINS_URL;
+            if (bundledPluginUrl == null) {
+                bundledPluginUrl = VendorConstants.BUNDLED_PLUGINS_URL();
             }
 
             try {
@@ -127,13 +127,14 @@ public class PluginManager extends JarPluginManager {
                 if (bundledPlugins == null) {
                     return BundledPluginList.BundledPlugins.builder().build();
                 }
+                this.bundledPlugins = bundledPlugins;
                 return bundledPlugins;
 
             } catch (IOException e) {
                 LOGGER.warn("Unable to load bundled plugin list from {}.", bundledPluginUrl);
                 return BundledPluginList.BundledPlugins.builder().build();
             }
-        }else {
+        } else {
             LOGGER.info("Do not install bundled plugins.");
             return BundledPluginList.BundledPlugins.builder().build();
         }
@@ -159,10 +160,11 @@ public class PluginManager extends JarPluginManager {
 
         if (settings.isSearchUpdates()) {
             if (settings.isUseDefaultRepo()) {
+                String defaultRepo = VendorConstants.DEFAULT_REPO_URL();
                 try {
-                    repos.add(new CorreoUpdateRepository(DEFAULT_REPO_ID, DEFAULT_REPO_URL));
+                    repos.add(new CorreoUpdateRepository(DEFAULT_REPO_ID, defaultRepo));
                 } catch (MalformedURLException e) {
-                    LOGGER.error("Invalid url for repo {} with url {}", DEFAULT_REPO_ID, DEFAULT_REPO_URL);
+                    LOGGER.error("Invalid url for repo {} with url {}", DEFAULT_REPO_ID, defaultRepo);
                 }
             }
             settings.getPluginRepositories().forEach((id, url) -> {
@@ -200,11 +202,11 @@ public class PluginManager extends JarPluginManager {
                 .collect(Collectors.toList());
     }
 
-    public List<IncomingMessageHook> getIncomingMessageHooks() {
+    public List<IncomingMessageHook<?>> getIncomingMessageHooks() {
         return PluginConfigProvider.getInstance().getIncomingMessageHooks()
                 .stream()
                 .map(extensionDefinition -> {
-                    IncomingMessageHook extension = getExtensionById(IncomingMessageHook.class,
+                    IncomingMessageHook<?> extension = getExtensionById(IncomingMessageHook.class,
                             extensionDefinition.getPluginId(),
                             extensionDefinition.getId());
                     if(extension == null){
@@ -284,7 +286,7 @@ public class PluginManager extends JarPluginManager {
         return extension;
     }
 
-    public <P extends BaseExtensionPoint<T>, T> P getExtensionById(Class<P> type, String pluginId, String extensionId) {
+    public <P extends BaseExtensionPoint<?>> P getExtensionById(Class<P> type, String pluginId, String extensionId) {
         return super.getExtensions(type, pluginId)
                 .stream()
                 .filter(e -> isExtensionIdResolved(e, extensionId))
@@ -328,7 +330,7 @@ public class PluginManager extends JarPluginManager {
     @Override
     public void unloadPlugins() {
         LOGGER.debug("Unload Plugins");
-        List<String> pluginIds = resolvedPlugins.stream().map(PluginWrapper::getPluginId).collect(Collectors.toList());
+        List<String> pluginIds = resolvedPlugins.stream().map(PluginWrapper::getPluginId).toList();
         for (String pluginId : pluginIds) {
             LOGGER.debug("Unload Plugin \"{}\"", pluginId);
             unloadPlugin(pluginId);
